Test cases attached to or derived from the Firebug issues list
git-svn-id: http://fbug.googlecode.com/svn@453 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/script/index.html
+++ b/tests/script/index.html
@@ -6,7 +6,9 @@
 <ul>
 <li><a href="InfiniteLoop.html">Infinite Loop</a></li>
 <li><a href="SimpleIncludeJavascript.html">Javascript included via <code>script</code> tag.</a></li>
-<li><a href="CallDynLoadedFunction.html">Javascript included via AJAX</a></li>
+<li><a href="CallDynLoadedFunction.html">Javascript included via AJAX, with source url</a></li>
+<li><a href="CallDynLoadedFunctionWithNoSourceURL.html">Javascript included via AJAX (no source url)</a></li>
+<li><a href="Event.html">Event</a></li>
 </ul>
 </body>
 </html>
