test for issue 2, breakpoint in unload
git-svn-id: http://fbug.googlecode.com/svn@492 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/script/index.html
+++ b/tests/script/index.html
@@ -9,6 +9,7 @@
 <li><a href="CallDynLoadedFunction.html">Javascript included via AJAX, with source url</a></li>
 <li><a href="CallDynLoadedFunctionWithNoSourceURL.html">Javascript included via AJAX (no source url)</a></li>
 <li><a href="Event.html">Event</a></li>
+<li><a href="breakpoint-onunload.html">Breakpoint in OnUnload, issue 2</a></li>
 </ul>
 </body>
 </html>
