--- a/tests/issues/issue525.html
+++ b/tests/issues/issue525.html
@@ -3,6 +3,9 @@
    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
    <title>Issue 525</title>
 <script type="text/javascript">
+  if (window.loadFirebugConsole) 
+    loadFirebugConsole();
+    
   console.log('foo');
 </script>
 
