More tests mostly those that fail :-(
git-svn-id: http://fbug.googlecode.com/svn@591 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/script/index.html
+++ b/tests/script/index.html
@@ -10,6 +10,8 @@
 <li><a href="CallDynLoadedFunctionWithNoSourceURL.html">Javascript included via AJAX (no source url)</a></li>
 <li><a href="Event.html">Event</a></li>
 <li><a href="breakpoint-onunload.html">Breakpoint in OnUnload, issue 2</a></li>
+<li><a href="ErrorInAnonymousFunction.html">Anonymous Functions</a></li>
+<li><a href="CreateScriptTag.html">Create Script Tag by Javascript</a></li>
 </ul>
 </body>
 </html>
