--- a/tests/issues/issue796.html
+++ b/tests/issues/issue796.html
@@ -8,11 +8,11 @@
 var foo = function() { console.trace(); };
 var bar = function() { foo(); };
 bar();
-</script> 
+</script>
 
     </head>
     <body>
-        <h1>Firebug Issue 689 Firebug doesn't display values of let variables when globals w/ same name are present</h1>
+        <h1>Issue 796: console.trace() always report "failed to stack trace with any frames"</h1>
         <pre>
 Reported by your.sheepy, Today (17 hours ago)
 
@@ -51,7 +51,7 @@ error stack trace.
 
 
         </pre>
-        
+
         <hr />
         <p></p>
     </body>
