Issue-derived test cases
git-svn-id: http://fbug.googlecode.com/svn@875 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/issues/ArrayPrototype.html
+++ b/tests/issues/ArrayPrototype.html
@@ -1,15 +1,22 @@
-<html>
-<head>
-<title>Array prototype test</title>
+<!DOCTYPE HTML>
+<html><head>
+<title> Function Prototype</title>
+</head><body>
+ <p><code>function Foo(){};</code></p><div id="result"></div>
+
 <script>
-var str = "Array.prototype= ";
-var a = new Array();
-a[0] = 5;
-for (var p in Array.prototype)
-    str += p + ", ";
-    var time = new Date().getTime();
-document.write(str+ time);
+
+
+
+function Foo(){};
+var fp = Foo.prototype;
+var str = "Foo.prototype="+fp;
+for (var p in fp)
+    str += "," + fp[p];
+
+document.getElementById("result").innerHTML = str;
+
+
 </script>
-<h2>Test Array.prototype</h2>
-</head>
+</body>
 </html>
