--- a/tests/issues/issue793.html
+++ b/tests/issues/issue793.html
@@ -3,9 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title>Firebug / Firefox 3 </title>
+
 </head>
 <body>
-<script>var a; if (a = 1) alert ("one");</script>
+<script type="text/javascript">var a; if (a = 1) alert ("one");</script>
 <h1>Firebug issue 793</h1>
 <strong>This issue requires setting <code>javascript.options.strict</code> true</strong>
 
