Update from Azer email of 7/29
git-svn-id: http://fbug.googlecode.com/svn@885 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/lite/branches/firebug1.2/lite/form.html
+++ b/lite/branches/firebug1.2/lite/form.html
@@ -6,6 +6,10 @@
 		<title>firebug lite</title>
 		<script type="text/javascript" src="Source/pi.js"></script>
 		<script type="text/javascript" src="Source/firebug-lite.js"></script>
+		<script type="text/javascript">
+		firebug.env.css = "firebug-lite.css";
+		firebug.env.height = 395;
+		</script>
 	</head>
 
 	<body>
@@ -13,5 +17,6 @@
 			<label>Hello</label><input /><br />
 			<textarea>world</textarea>
 		</form>
+		<div style="height:5000px; width:100px; background:red"></div>
 	</body>
 </html>
