git-svn-id: http://fbug.googlecode.com/svn@941 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/lite/branches/firebug1.2/lite/form.html
+++ b/lite/branches/firebug1.2/lite/form.html
@@ -17,6 +17,6 @@
 			<label>Hello</label><input /><br />
 			<textarea>world</textarea>
 		</form>
-		<div style="height:5000px; width:100px; background:red"></div>
+		<div style="height:5000px; width:100px; background:red">asdasdsad<button></button></div>
 	</body>
 </html>
