--- a/tests/console/detectFirebug.html
+++ b/tests/console/detectFirebug.html
@@ -28,5 +28,8 @@ var log = function(item){
 <body>
 <button onclick="log('I can see the console')">Try to write to Firebug console. (reload each test)</button>
 <div id="result"></div>
+
+<p>If the Firebug Console panel is disabled when the page is loaded, then the result should be "no console!".</p>
+<p>If the Firebug Console panel is enabled when the page is loaded, then the result should be "found console".</p>
 </body>
 </html>
