--- a/tests/issues/issue814/b.htm
+++ b/tests/issues/issue814/b.htm
@@ -2,6 +2,7 @@
 	<head>
 		<script>
 			function test() {
+				console.info("Success in frame b");
 				document.getElementById('result').innerHTML='This is test B.';
 			}
 		</script>
