test case for 463239
git-svn-id: http://fbug.googlecode.com/svn@1294 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/tests/jsdTests@johnjbarton.com/content/testWebPage.html
+++ b/chromebug/tests/jsdTests@johnjbarton.com/content/testWebPage.html
@@ -4,12 +4,17 @@
 <script type="text/javascript">
 // Allow chrome urls into web pages. 
 netscape.security.PrivilegeManager.enablePrivilege("UniversalXPConnect");
+window.dump("hello\n");
 </script>
  
 <!-- predefined functions by TestSuite -->
      <script type="text/javascript" src="jsd/shell.js"></script>
 <!-- The Test Case -->
-     <script type="text/javascript" src="jsd/jsdIScript/bugzilla-462704.js"></script>
+<!--      <script type="text/javascript" src="jsd/jsdIScript/bugzilla-462704.js"></script> -->
+     <script type="text/javascript" src="jsd/jsdIScript/bugzilla-463239.js"></script>
+<script type="text/javascript">
+window.dump("hello2\n");
+</script>
 <style type="text/css">
 .testPass {
     background-color: green;
@@ -25,7 +30,7 @@ netscape.security.PrivilegeManager.enablePrivilege("UniversalXPConnect");
 
 window.log = function(msg)
 {
-	//window.console.log(msg);
+    window.dump(msg);
 }
 window.output  = {
 heading: function(prefix)
