begin tests for event listeners
git-svn-id: http://fbug.googlecode.com/svn@1413 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/tests/jsdTests@johnjbarton.com/content/jsd/jsdIDebuggerService2/createScripts.html
+++ b/chromebug/tests/jsdTests@johnjbarton.com/content/jsd/jsdIDebuggerService2/createScripts.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>jsd Test case: All the possible ways to create a function using Javascript</title>
-<script>
+<!-- <script>
 function inlineScriptTag_Step()
 {
 	return true;
@@ -74,7 +74,7 @@ var writeTarget = document.getElementById("testFrame");
 writeTarget.contentDocument.open();
 writeTarget.contentDocument.write(src);
 writeTarget.contentDocument.close();
-</script>
+</script> -->
 <script  type="text/javascript">
 var src = "";
 src += "function documentCreateElementAppendChild_Step()\n";
