--- a/chromebug/tests/jsdTests@johnjbarton.com/content/testWebPage.html
+++ b/chromebug/tests/jsdTests@johnjbarton.com/content/testWebPage.html
@@ -1,78 +1,8 @@
 <html>
 <head>
 <title>jsd Tests testExtension@mozilla.org</title>
-<style type="text/css">
-.testPass {
-    background-color: green;
-}
-.testFail {
-    background-color: red;
-}
-.testHeader {
-    font-size: large;
-}
-</style>
-<script>
-
-var allTests = [];
-
-window.log = function(msg)
-{
-    //window.dump(msg);
-    if ((window.location.toString().indexOf("http") != -1) && window.console)
-    	window.console.log(msg);
-	try {
-		output.heading(msg);
-	} catch (exc) {
-	}
-}
-window.output  = {
-    heading: function(prefix)
-    {
-	   var result = document.getElementById('result');
-	   var h = document.createElement('li');
-	   h.innerHTML = prefix;
-	   h.setAttribute("class", "testHeader");
-	   result.appendChild(h);
-	   this.testResult = document.createElement('ol');
-	   result.appendChild(this.testResult);
-	},
-
-    report: function(expr, successMessage, failedMessage)
-    {
-	    if (expr) window.dump(successMessage+"\n");
-	    else window.dump(failedMessage+"\n");
-	    var line = document.createElement('li');
-	    if (expr)
-	    {
-	        line.innerHTML = successMessage;
-	        line.setAttribute("class", "testPass");
-	    }
-	    else
-	    {
-	        line.innerHTML = failedMessage;
-	        line.setAttribute("class", "testFail");
-	    }
-    
-	    this.testResult.appendChild(line);
-	}
-}
-function runAllTests()
-{
-    try 
-    {
-    	for (var i = 0; i < allTests.length; i++)
-        	allTests[i].call();
-    }
-    catch (exc)
-    {
-        window.dump("runAllTests failed: "+exc+"\n");
-        for (var p in exc)
-            window.dump("exc["+p+"]="+exc[p]+"\n");
-    }
-}
-window.addEventListener('load', runAllTests, false);
-</script>
+<style type="text/css" src="testIOStyle.css" />
+<script type="text/javascript" src="testIO.js"></script>
 <!-- predefined functions by TestSuite -->
      <script type="text/javascript" src="jsd/shell.js"></script>
 <!-- The Test Case -->
@@ -90,7 +20,9 @@ window.addEventListener('load', runAllTests, false);
 <body>
 <h1>jsd Test Web Page</h1>
  
-<ol id="result"/>
-
+<ol id="result"/>Anything is ok with you.
+Do you want more typing or is this enough now?
+Ok I'll keep it up...`1
+Sit closer to the keyboard.
 </body>
 </html>
