--- a/chromebug/tests/jsdTests@johnjbarton.com/content/testSelector.html
+++ b/chromebug/tests/jsdTests@johnjbarton.com/content/testSelector.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>jsd Tests testExtension@mozilla.org</title>
-<style type="text/css" src="testIOStyle.css" />
+<title>jFirebug 2.0 Infrastructure Tests</title>
+<style type="text/css" src="testIOStyle.css"></style>
 <script type="text/javascript" src="testIO.js"></script>
 <!-- predefined functions by TestSuite -->
      <script type="text/javascript" src="jsd/shell.js"></script>
@@ -18,11 +18,12 @@
     <!-- You can debug the code a bit by loading this page in Firefox directly -->
 </head>
 <body>
-<h1>jsd Test Web Page</h1>
- 
-<ol id="result"/>Anything is ok with you.
-Do you want more typing or is this enough now?
-Ok I'll keep it up...`1
-Sit closer to the keyboard.
+<h1>Tests</h1>
+<ol>
+<li><a href="chrome://jsdtest/content/events/listeners.html">nsIEventListenters</a></li>
+<li><a href="chrome://jsdtest/content/jsd/jsd.html">jsd tests</a></li>
+<li><a href="about:config">config</a></li>
+</ol>
+
 </body>
 </html>
