new test cases for issues 946, 1239, 1289
git-svn-id: http://fbug.googlecode.com/svn@1484 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/issues/Issue1096.htm
+++ b/tests/issues/Issue1096.htm
@@ -4,26 +4,30 @@
 </head>
 <body>
 <script language="JavaScript" type="text/javascript">
-function init() {
-    try
-    {
+var src = "function b463239() {\n";
+    src+= "try\n";
+    src+= "{\n";
         //var ex = {fileName: "foo", lineNumber: 6};  // If we throw this object, no bug.
-        throw new Error('Test Exception');
-    }
-    catch(ex)
-    {
-        var condition  = (ex.fileName != null) && (ex.lineNumber != null); // Set a breakpoint here.
+    src+= "    throw new Error('Test Exception');\n";
+    src+= "}\n";
+    src+= "catch(ex)\n";
+    src+= "{\n";
+    src+= "    var condition  = (ex.fileName != null) && (ex.lineNumber != null); // Set a breakpoint here.\n";
+    src+= "    \n";
+    src+= "    report(condition, 'success', 'failed');\n";
+    src+= "}\n";
+    src+= "}\n";
+eval(src);
 
-        if(condition)
-            document.getElementById("result").innerHTML = "Success";
-        else
-            document.getElementById("result").innerHTML = "FAILED";
-    }
+function report(expr, good, bad)
+{
+    if (expr)	
+        document.getElementById("result").innerHTML = good;
+    else
+    	document.getElementById("result").innerHTML = bad;
 }
-
-
 </script>
 
-<p>Set a breakpoint in the code. <button onclick="init();">Click to Test</button>&nbsp;<span id="result"></span></p>
+<p>Set a breakpoint in the code. <button onclick="b463239();">Click to Test</button>&nbsp;<span id="result"></span></p>
 
 </body></html>
