--- a/tests/issues/issue796.html
+++ b/tests/issues/issue796.html
@@ -19,11 +19,11 @@ Reported by your.sheepy, Today (17 hours ago)
 What steps will reproduce the problem?
 1. Create a web page that reads:
 
-<html><body><script type="application/javascript;version=1.7">
+&lang;html>&lang;body>&lang;script type="application/javascript;version=1.7">
 var foo = function() { console.trace(); };
 var bar = function() { foo(); };
 bar();
-</script></body></html>
+&lang;/script>&lang;/body>&lang;/html>
 
 2. load the page and check console.
 
