Include issue372.html and issue1308.html into the test suite.
git-svn-id: http://fbug.googlecode.com/svn@1530 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/start.html
+++ b/tests/unit/start.html
@@ -11,10 +11,10 @@ if (fireunit.forceHttp()) {
         "net/issue176.html",        // Filter for Flash requests
         "net/issue601.html",        // Response Tab
         "net/issue1256.html",       // Params Tab
-        //"net/issue372.html",        // Post Tab
+        "net/issue372.html",        // Post Tab
         "net/issue700.html",        // HTML Tab
         "net/issue1299.html",       // Firebug must cache even responses coming from FF cache
-        //"net/issue1308.html",       // + sign in POST (proper encoding, Copy Location With Parameters)
+        "net/issue1308.html",       // + sign in POST (proper encoding, Copy Location With Parameters)
         "net/netPanelListener.html",     // Test listener for Firebug.NetMonitor
         "net/netInfoBodyListener.html",  // Test listener for Firebug.NetMonitor.NetInfoBody 
         "net/netSpyListener.html",       // Test listener for Firebug.Spy
