New unit-test for Issue 1307: XhrRequests are not logged in the console window
git-svn-id: http://fbug.googlecode.com/svn@1615 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/start.html
+++ b/tests/unit/start.html
@@ -7,6 +7,7 @@ if (fireunit.forceHttp()) {
     fireunit.runTests( 
         "console/inspect.html",     // Basic command line execution
         "console/commandline.html", // Bunch of tests for command line APIs 
+        "console/issue1307.html",   // XhrRequests are not logged in the console window 
         // xxxHonza: "domplate/domplate.html",   // Domplate tests 
         "net/netPanel.html",        // Existence of net panel
         "net/netEntry.html",        // Existence of a simple entry in net panel
