Move env.js file one level up in dir tree. This file is useful for all unit-tests.
git-svn-id: http://fbug.googlecode.com/svn@1616 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/script/scriptWatch1.html
+++ b/tests/unit/script/scriptWatch1.html
@@ -2,7 +2,7 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<script src="env.js" type="text/javascript"></script>
+<script src="../env.js" type="text/javascript"></script>
 </head>
 <body>
 <h1>Use watch panel when the user is currently in debug mode.</h1>
