--- a/tests/unit/script/scriptWatch1Win.html
+++ b/tests/unit/script/scriptWatch1Win.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<script src="env.js" type="text/javascript"></script>
+<script src="../env.js" type="text/javascript"></script>
 <script type = "text/javascript">
 // Handle error that occurs on the page.
 function onError(errType, errURL, errLineNum)
