--- a/tests/unit/console/commandline.html
+++ b/tests/unit/console/commandline.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<script src="../net/env.js"></script>
+<script src="../env.js"></script>
 <script>
 var state = false;
 
