Unit test for Issue 369: Inspect JSON data in HTTP responses
git-svn-id: http://fbug.googlecode.com/svn@1622 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/start.html
+++ b/tests/unit/start.html
@@ -22,7 +22,8 @@ if (fireunit.forceHttp()) {
         "net/netPanelListener.html",     // Test listener for Firebug.NetMonitor
         "net/netInfoBodyListener.html",  // Test listener for Firebug.NetMonitor.NetInfoBody 
         "net/netSpyListener.html",       // Test listener for Firebug.Spy
-        "net/netCacheListener.html"      // Test listener for Firebug.Spy
+        "net/netCacheListener.html",     // Test listener for Firebug.Spy
+        "net/issue369.html"         // Inspect JSON data in HTTP responses
     );
 }
 </script>
