--- a/tests/unit/startNet.html
+++ b/tests/unit/startNet.html
@@ -19,7 +19,8 @@ if (fireunit.forceHttp()) {
         "net/netInfoBodyListener.html",  // Test listener for Firebug.NetMonitor.NetInfoBody 
         "net/netSpyListener.html",       // Test listener for Firebug.Spy
         "net/netCacheListener.html",     // Test listener for Firebug.Spy
-        "net/issue369.html"         // Inspect JSON data in HTTP responses
+        "net/issue369.html",        // Inspect JSON data in HTTP responses
+        "net/netSelection.html"     // Test for Net panel selection using chrome.select and NetFileLink
     );
 }
 </script>
