--- a/tests/unit/startConsole.html
+++ b/tests/unit/startConsole.html
@@ -6,8 +6,9 @@
 if (fireunit.forceHttp()) {
     fireunit.runTests( 
         "console/inspect.html",     // Basic command line execution
-        "console/commandline.html", // Bunch of tests for command line APIs 
-        "console/issue1307.html"    // XhrRequests are not logged in the console window 
+        //xxxHonza: this must be refactored yet: "console/commandline.html", // Bunch of tests for command line APIs 
+        "console/issue1307.html",   // XhrRequests are not logged in the console window 
+        "console/issue1383.html"    // 1.3: if the last line is a comment throws Syntax Error: missing } 
     );
 }
 </script>
