--- a/tests/unit/testRunner.html
+++ b/tests/unit/testRunner.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Firebug Test Runner</h1>
-<p>Use this page to run Fireug automated tests.<br/>
+<p>Use this page to run Firebug automated tests.<br/>
 <ul>
     <li>Firebug and Fireunit must be installed.</li>
     <li><i>Enable Privileges</i> option in Fireunit must be on.</li>
