Remove timeout for script-watch test for now.
git-svn-id: http://fbug.googlecode.com/svn@1715 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/script/scriptWatch1.html
+++ b/tests/unit/script/scriptWatch1.html
@@ -22,6 +22,7 @@
 <i>It is step 11 that was broken.</i>
 <div id="channel"/>
 <script type = "text/javascript">
+fireunit.testTimeout = 0;
 var testWindow = null;
 function startTest()
 {
