--- a/tests/unit/script/scriptWatch1Win.html
+++ b/tests/unit/script/scriptWatch1Win.html
@@ -2,6 +2,8 @@
 <head>
 <script src="../env.js" type="text/javascript"></script>
 <script type = "text/javascript">
+fireunit.testTimeout = 0;
+
 // Handle error that occurs on the page.
 function onError(errType, errURL, errLineNum)
 {
