Little tweaking so, an error message isn't displayed at the beginning.
git-svn-id: http://fbug.googlecode.com/svn@1724 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/testRunner.html
+++ b/tests/unit/testRunner.html
@@ -24,7 +24,8 @@
 <script>
 var content = document.getElementById("content");
 var runAll = document.getElementById("runAll");
-if (typeof fireunit != "undefined" && fireunit.forceHttp()) { with (FBL) {
+if (typeof fireunit != "undefined") {
+if (fireunit.forceHttp()) { with (FBL) {
 //-----------------------------------------------------------------------------
 
 // The Run All button can be visible now.
@@ -183,7 +184,7 @@ var TestList = domplate(
 CategoryList.tableTag.replace({testList: testList}, content);
 
 //-----------------------------------------------------------------------------
-}} 
+}}}
 else {
     content.innerHTML ="<span style='color:red'>Fireunit must be installed.</span>";
 } 
