Fix name conflict in testRunner.html
git-svn-id: http://fbug.googlecode.com/svn@1748 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/unit/testRunner.html
+++ b/tests/unit/testRunner.html
@@ -18,7 +18,7 @@
 </ul>
 </p>
 
-<button id="runAll" onclick="runAll()" style="display:none">Run All</button>
+<button id="runAll" onclick="runAllTests()" style="display:none">Run All</button>
 <br/><br/>
 <div id="content"/>
 <script>
@@ -32,7 +32,7 @@ if (fireunit.forceHttp()) { with (FBL) {
 runAll.style.display = "block";
 
 // Run all tests in one test suite.
-function runAll() {
+function runAllTests() {
     runTests(testList);
 }
 
